// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Address mismatch card renders correctly 1`] = `
<div>
  <div
    class="components-card is-size-medium fraud-protection-rule-card css-1xs3c37-CardUI e1q7k77g0"
    id="address-mismatch-card"
  >
    <div
      class="components-card__body is-size-medium wcpay-card-body fraud-protection-rule-card-header-container css-xmjzce-BodyUI e1q7k77g3"
    >
      <div>
        <p
          class="fraud-protection-rule-card-header"
        >
          Address Mismatch
        </p>
        <p
          class="fraud-protection-rule-card-description"
        >
          This filter screens for differences between the shipping information and the billing information (country).
        </p>
      </div>
    </div>
    <hr />
    <div
      class="components-card__body is-size-medium wcpay-card-body css-xmjzce-BodyUI e1q7k77g3"
    >
      <div
        class="fraud-protection-rule-toggle"
      >
        <strong>
          Enable filtering
        </strong>
        <div
          class="components-base-control components-toggle-control fraud-protection-rule-toggle-toggle css-wdf2ti-Wrapper e1puf3u0"
        >
          <div
            class="components-base-control__field css-11vcxb9-StyledField e1puf3u1"
          >
            <span
              class="components-form-toggle"
            >
              <input
                aria-describedby="inspector-toggle-control-0__help"
                class="components-form-toggle__input"
                id="inspector-toggle-control-0"
                type="checkbox"
              />
              <span
                class="components-form-toggle__track"
              />
              <span
                class="components-form-toggle__thumb"
              />
            </span>
            <label
              class="components-toggle-control__label"
              for="inspector-toggle-control-0"
            >
              Screen transactions for mismatched addresses
            </label>
          </div>
          <p
            class="components-base-control__help css-1wm1a55-StyledHelp e1puf3u3"
            id="inspector-toggle-control-0__help"
          >
            When enabled, the payment method will not be charged until you review and approve the transaction.
          </p>
        </div>
      </div>
      <div
        class="fraud-protection-rule-description"
      >
        <strong>
          How does this filter protect me?
        </strong>
        <p>
          There are legitimate reasons for a billing/shipping mismatch with a customer purchase, but a mismatch could also indicate that someone is using a stolen identity to complete a purchase.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Address mismatch card renders correctly when enabled 1`] = `
<div>
  <div
    class="components-card is-size-medium fraud-protection-rule-card css-1xs3c37-CardUI e1q7k77g0"
    id="address-mismatch-card"
  >
    <div
      class="components-card__body is-size-medium wcpay-card-body fraud-protection-rule-card-header-container css-xmjzce-BodyUI e1q7k77g3"
    >
      <div>
        <p
          class="fraud-protection-rule-card-header"
        >
          Address Mismatch
        </p>
        <p
          class="fraud-protection-rule-card-description"
        >
          This filter screens for differences between the shipping information and the billing information (country).
        </p>
      </div>
    </div>
    <hr />
    <div
      class="components-card__body is-size-medium wcpay-card-body css-xmjzce-BodyUI e1q7k77g3"
    >
      <div
        class="fraud-protection-rule-toggle"
      >
        <strong>
          Enable filtering
        </strong>
        <div
          class="components-base-control components-toggle-control fraud-protection-rule-toggle-toggle css-wdf2ti-Wrapper e1puf3u0"
        >
          <div
            class="components-base-control__field css-11vcxb9-StyledField e1puf3u1"
          >
            <span
              class="components-form-toggle is-checked"
            >
              <input
                aria-describedby="inspector-toggle-control-1__help"
                class="components-form-toggle__input"
                id="inspector-toggle-control-1"
                type="checkbox"
              />
              <span
                class="components-form-toggle__track"
              />
              <span
                class="components-form-toggle__thumb"
              />
            </span>
            <label
              class="components-toggle-control__label"
              for="inspector-toggle-control-1"
            >
              Screen transactions for mismatched addresses
            </label>
          </div>
          <p
            class="components-base-control__help css-1wm1a55-StyledHelp e1puf3u3"
            id="inspector-toggle-control-1__help"
          >
            The payment method will not be charged until you review and approve the transaction.
          </p>
        </div>
        <div>
          <div
            class="fraud-protection-rule-toggle-block"
          >
            <strong>
              Filter action
            </strong>
            <div
              class="components-base-control components-radio-control css-wdf2ti-Wrapper e1puf3u0"
            >
              <div
                class="components-base-control__field css-11vcxb9-StyledField e1puf3u1"
              >
                <div
                  class="components-radio-control__option"
                >
                  <input
                    checked=""
                    class="components-radio-control__input"
                    id="inspector-radio-control-0-0"
                    name="inspector-radio-control-0"
                    type="radio"
                    value="review"
                  />
                  <label
                    for="inspector-radio-control-0-0"
                  >
                    Authorize and hold for review
                  </label>
                </div>
                <div
                  class="components-radio-control__option"
                >
                  <input
                    class="components-radio-control__input"
                    id="inspector-radio-control-0-1"
                    name="inspector-radio-control-0"
                    type="radio"
                    value="block"
                  />
                  <label
                    for="inspector-radio-control-0-1"
                  >
                    Block Payment
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="fraud-protection-rule-description"
      >
        <strong>
          How does this filter protect me?
        </strong>
        <p>
          There are legitimate reasons for a billing/shipping mismatch with a customer purchase, but a mismatch could also indicate that someone is using a stolen identity to complete a purchase.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Address mismatch card renders correctly when enabled and checked 1`] = `
<div>
  <div
    class="components-card is-size-medium fraud-protection-rule-card css-1xs3c37-CardUI e1q7k77g0"
    id="address-mismatch-card"
  >
    <div
      class="components-card__body is-size-medium wcpay-card-body fraud-protection-rule-card-header-container css-xmjzce-BodyUI e1q7k77g3"
    >
      <div>
        <p
          class="fraud-protection-rule-card-header"
        >
          Address Mismatch
        </p>
        <p
          class="fraud-protection-rule-card-description"
        >
          This filter screens for differences between the shipping information and the billing information (country).
        </p>
      </div>
    </div>
    <hr />
    <div
      class="components-card__body is-size-medium wcpay-card-body css-xmjzce-BodyUI e1q7k77g3"
    >
      <div
        class="fraud-protection-rule-toggle"
      >
        <strong>
          Enable filtering
        </strong>
        <div
          class="components-base-control components-toggle-control fraud-protection-rule-toggle-toggle css-wdf2ti-Wrapper e1puf3u0"
        >
          <div
            class="components-base-control__field css-11vcxb9-StyledField e1puf3u1"
          >
            <span
              class="components-form-toggle is-checked"
            >
              <input
                aria-describedby="inspector-toggle-control-2__help"
                class="components-form-toggle__input"
                id="inspector-toggle-control-2"
                type="checkbox"
              />
              <span
                class="components-form-toggle__track"
              />
              <span
                class="components-form-toggle__thumb"
              />
            </span>
            <label
              class="components-toggle-control__label"
              for="inspector-toggle-control-2"
            >
              Screen transactions for mismatched addresses
            </label>
          </div>
          <p
            class="components-base-control__help css-1wm1a55-StyledHelp e1puf3u3"
            id="inspector-toggle-control-2__help"
          >
            The payment will be blocked.
          </p>
        </div>
        <div>
          <div
            class="fraud-protection-rule-toggle-block"
          >
            <strong>
              Filter action
            </strong>
            <div
              class="components-base-control components-radio-control css-wdf2ti-Wrapper e1puf3u0"
            >
              <div
                class="components-base-control__field css-11vcxb9-StyledField e1puf3u1"
              >
                <div
                  class="components-radio-control__option"
                >
                  <input
                    class="components-radio-control__input"
                    id="inspector-radio-control-1-0"
                    name="inspector-radio-control-1"
                    type="radio"
                    value="review"
                  />
                  <label
                    for="inspector-radio-control-1-0"
                  >
                    Authorize and hold for review
                  </label>
                </div>
                <div
                  class="components-radio-control__option"
                >
                  <input
                    checked=""
                    class="components-radio-control__input"
                    id="inspector-radio-control-1-1"
                    name="inspector-radio-control-1"
                    type="radio"
                    value="block"
                  />
                  <label
                    for="inspector-radio-control-1-1"
                  >
                    Block Payment
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="fraud-protection-rule-description"
      >
        <strong>
          How does this filter protect me?
        </strong>
        <p>
          There are legitimate reasons for a billing/shipping mismatch with a customer purchase, but a mismatch could also indicate that someone is using a stolen identity to complete a purchase.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Address mismatch card renders like disabled when checked, but not enabled 1`] = `
<div>
  <div
    class="components-card is-size-medium fraud-protection-rule-card css-1xs3c37-CardUI e1q7k77g0"
    id="address-mismatch-card"
  >
    <div
      class="components-card__body is-size-medium wcpay-card-body fraud-protection-rule-card-header-container css-xmjzce-BodyUI e1q7k77g3"
    >
      <div>
        <p
          class="fraud-protection-rule-card-header"
        >
          Address Mismatch
        </p>
        <p
          class="fraud-protection-rule-card-description"
        >
          This filter screens for differences between the shipping information and the billing information (country).
        </p>
      </div>
    </div>
    <hr />
    <div
      class="components-card__body is-size-medium wcpay-card-body css-xmjzce-BodyUI e1q7k77g3"
    >
      <div
        class="fraud-protection-rule-toggle"
      >
        <strong>
          Enable filtering
        </strong>
        <div
          class="components-base-control components-toggle-control fraud-protection-rule-toggle-toggle css-wdf2ti-Wrapper e1puf3u0"
        >
          <div
            class="components-base-control__field css-11vcxb9-StyledField e1puf3u1"
          >
            <span
              class="components-form-toggle"
            >
              <input
                aria-describedby="inspector-toggle-control-3__help"
                class="components-form-toggle__input"
                id="inspector-toggle-control-3"
                type="checkbox"
              />
              <span
                class="components-form-toggle__track"
              />
              <span
                class="components-form-toggle__thumb"
              />
            </span>
            <label
              class="components-toggle-control__label"
              for="inspector-toggle-control-3"
            >
              Screen transactions for mismatched addresses
            </label>
          </div>
          <p
            class="components-base-control__help css-1wm1a55-StyledHelp e1puf3u3"
            id="inspector-toggle-control-3__help"
          >
            When enabled, the payment method will not be charged until you review and approve the transaction.
          </p>
        </div>
      </div>
      <div
        class="fraud-protection-rule-description"
      >
        <strong>
          How does this filter protect me?
        </strong>
        <p>
          There are legitimate reasons for a billing/shipping mismatch with a customer purchase, but a mismatch could also indicate that someone is using a stolen identity to complete a purchase.
        </p>
      </div>
    </div>
  </div>
</div>
`;
